Dashboard Fix Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/pages/dashboard.scss
+++ b/src/assets/scss/pages/dashboard.scss
@@ -414,6 +414,9 @@ body,
             padding: 0px 6px;
         }
     }
+    .statistics .stats__content p{
+        font-size: 12px;
+    }
 }
 
   .mat-button-focus-overlay {
