--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -351,6 +351,15 @@ a:hover {
   width: 96%;
 }
 
+.width98Percent{
+  width: 98%;
+}
+
+
+.margin-0-auto{
+  margin: 0 auto;
+}
+
 .mat-form-field textarea,
 .gray-border {
   border: 1px solid $icon-color-gray;
