--- a/src/assets/scss/pages/dashboard.scss
+++ b/src/assets/scss/pages/dashboard.scss
@@ -401,6 +401,11 @@ body,
             .statistics .stats__content h2{
                 font-size: 15px;
             }
+            // .statistics__tile{
+            //         border: 1px solid #bdbdbd;
+            //         border-left: 5px solid #1896BA;
+
+            // }
   }
 
 @media only screen and (max-width: 378px) {
