--- a/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
@@ -1,6 +1,6 @@
 <!-- <fix-header></fix-header> -->
 <div>
-  <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+  <div class="min-height parent">
     <div class="row submit-bid-row-add">
       <div class="submit-bid-div-add">
 
@@ -61,6 +61,19 @@
               </div>
 
             </div>
+
+            <div class="row p-t-20">
+              <div class="col-xs-6" (click)="openAddressDialog()">
+                <div [ngClass]="[AddressValid ? 'select-address-tag' : 'select-address-tag-disabled']">
+                   Select Address
+                </div>
+              </div>
+               <div class="col-xs-6" (click)="reset()">
+                  <div class="reset-form-tag">    
+                      Reset
+                  </div>
+              </div>
+            </div>
             <!-- fourth row -->
             <div class="row p-t-20">
               <div class="col-sm-6">
@@ -105,7 +118,7 @@
                     class="form-error-msg"> Pincode is required </small>
                   <!-- <small *ngIf="form.controls['pinCode'].hasError('pattern') && form.controls['pinCode'].touched"
                     class="form-error-msg"> Enter Valid pinCode</small> -->
-                   <small *ngIf="form.controls['pinCode'].touched && (!validPincode) && (pincodeLength>0)" class="error-msg">
+                   <small *ngIf="form.controls['pinCode'].touched && (!validPincode) && form.controls['pinCode'].hasError('pattern')" class="error-msg">
                       Enter Valid Pincode
                    </small> 
                 </mat-form-field>
@@ -152,7 +165,7 @@
 
           <div mat-dialog-actions>
             <div class="col-sm-12 save-btn-add-edit-user-modal rfq-bid-address">
-              <button mat-raised-button [disabled]="addSupplierAddress ? false : (!form.valid || (!validPincode))" (click)="saveAddress()"
+              <button mat-raised-button [disabled]="(!form.valid)" (click)="saveAddress()"
                 class="main-background-color main-button color-white pull-right">
                 Submit
               </button>
