--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -179,8 +179,11 @@
     </div>
 
     <div class="row width-100 p-t-10">
-      <div class="col-md-12">
-        <div class="text-align-center font-size20 text-semi-bold">
+        <div class="col-md-4 col-sm-12">
+             <app-rfq-bid-documents #rfqDocument [documentData]="documentList"></app-rfq-bid-documents>
+      </div>
+      <div class="col-md-8 col-sm-12">
+        <div class="text-align-center font-size16 text-semi-bold">
           Comments
         </div>
         <form [formGroup]="poTerms">
@@ -189,7 +192,7 @@ Hello, Froala!</textarea
           >
         </form>
       </div>
-      <div class="col-md-12 background-white-color border-radius parent">
+      <div class="col-md-12">
         <div class="word-wrap" *ngIf="rfqSupplierDetailList.comments && rfqSupplierDetailList.comments !== ''" [innerHTML]="rfqSupplierDetailList.comments"></div>
         <div class="center-element" *ngIf="rfqSupplierDetailList && rfqSupplierDetailList.comments == ''">No Comments To View</div>
       </div>
