Snack Bar Implemented - on both PO and View Bids for Qty error Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -49,9 +49,9 @@
             </span>
             <span class="mat-cell"></span>
             <span class="mat-cell text-center max-width-128">{{ getMaterialQuantity(m) | number: "1.2-2" }}
-              <span *ngIf="getMaterialQuantity(m) > material.poAvailableQty" class="error-msg white-space-nowrap font-size9 min-width-128">
+              <!-- <span *ngIf="getMaterialQuantity(m) > material.poAvailableQty" class="error-msg white-space-nowrap font-size9 min-width-128">
                 Must be less than {{material.poAvailableQty}}
-              </span>
+              </span> -->
             </span>
             <span class="mat-cell text-right p-r-20">{{ getMaterialAmount(m) | number: "1.2-2" }}</span>
             <span class="mat-cell"></span>
@@ -94,6 +94,7 @@
                       formControlName="materialQuantity"
                       placeholder="quantity"
                       min="0"
+                      (input)="checkQty(m,p,material.poAvailableQty,$event)"
                     />
                   </mat-form-field>
                 </ng-template>
