--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -69,7 +69,7 @@
                     <section class="mat-row rfqbid-header-color">
                       <span class="col-sm-2">
                         <div class="limited-character" matTooltip=" {{ material.materialName }}">{{ material.materialName }} <br />
-                        <span *ngIf="!rfqForms.controls.forms['controls'][p].controls.materialList.controls[m].controls.validQtyBoolean.value" class="error-msg font-size9"> Net Quantity Should be less than {{material.poAvailableQty}} </span>
+                        <!-- <span *ngIf="!rfqForms.controls.forms['controls'][p].controls.materialList.controls[m].controls.validQtyBoolean.value" class="error-msg font-size9"> Net Quantity Should be less than {{material.poAvailableQty}} </span> -->
                         </div>
                       </span>
                       <span class="col-sm-1">
