--- a/src/app/shared/dialogs/show-supplier-remarks-documents/show-supplier-remarks-documents.component.html
+++ b/src/app/shared/dialogs/show-supplier-remarks-documents/show-supplier-remarks-documents.component.html
@@ -1,14 +1,64 @@
-<div class="add-project-component-dialog">
+
   <div class="header-add-edit-dialog">
-    <h1 mat-dialog-title>Supplier Details</h1>
+    <h1 mat-dialog-title>Review Documents</h1>
     <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
       <span aria-hidden="true">×</span>
     </button>
   </div>
   <div mat-dialog-content>
-  
-  </div>
-  <div mat-dialog-actions>
+  <div class="row remarks-suppliers">
+    <div class="col-md-3 suppliers-list">
+      <div class="heading">
+          Select Supplier
+      </div>
+      <div class="supplier-list-name"> 
+        <ng-container *ngFor="let supplier of supplierList;let i=index;">
+        <div [ngClass]="index == i ? 'list-of-suppliers active' : 'list-of-suppliers'" (click)="showSupplierDetails(i)" >
+         <div class="p-5">
+           {{supplier.supplierName}}
+         </div> 
+        </div>
+      </ng-container>
+      </div>
+      
+    </div>
+    <div class="col-md-9 suppliers-details">
+     <ng-container *ngIf="supplierList[index] && supplierList[index].comments">
+       <div class="heading">
+          Terms and Condition
+        </div> 
 
+        <div class="comments-of-supplier" [innerHTML]=supplierList[index].comments>
+        </div>
+     </ng-container>
+       
+     <ng-container *ngIf="supplierList[index] && supplierList[index].documentsList">
+         <div class="heading">
+            Documents
+          </div>
+
+        <div class="documents-show-div">
+            <mat-list-item class="files-list"*ngFor="let file of supplierList[index].documentsList">
+            <div class="display-flex justify-content-space-between">
+                <div class="documents-name">
+                  <img class="file-icon" src="../../../../assets/images/file-doc.png" />
+                  <span>{{ file.DocumentDesc }}</span>
+                </div>
+
+                <div class="show-download">
+                  <!-- <img src="../../../../assets/images/download-po.png" (click)="downloadURI(file.DocumentUrl,file.DocumentDesc)"/> -->
+                    <a type="button" target="_blank" [href]="file.DocumentUrl" mat-icon-button>
+                    <i class="material-icons">
+                      remove_red_eye
+                    </i>
+                  </a>
+                </div>
+            </div>
+            </mat-list-item>
+        </div>
+          
+      </ng-container>
+    </div>
   </div>
-</div>
+  </div>
+  
