--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -571,3 +571,9 @@ mat-accordion {
 .justify-content-flex-end{
   justify-content: flex-end;
 }
+.justify-content-space-around{
+   justify-content: space-around;
+}
+.justify-content-space-between{
+   justify-content: space-between;
+}
