Word break done in Dashboard Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/pages/dashboard.scss
+++ b/src/assets/scss/pages/dashboard.scss
@@ -146,9 +146,11 @@ body,
         }
         &__content {
             h2 {
-                font-size: 30px;
+                font-size: 25px;
                 color: #f4793d;
                 font-weight: 600;
+                max-width:250px;
+                word-wrap:break-word;
             }
             p {
                 font-size: 14px;
