--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -28,3 +28,21 @@
     padding-bottom: 4px !important;
   }
 }
+
+.header-border {
+  border-bottom: 1px solid #d0d0d0;
+}
+
+.button-background {
+  background-color: transparent;
+  border: none;
+}
+
+.mat-form-field-label-wrapper {
+  .mat-form-field-appearance-legacy .mat-form-field-label {
+    padding-top: 8px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    padding-bottom: 0px !important;
+  }
+}
