--- a/src/app/shared/dialogs/add-my-material/add-my-material.component.html
+++ b/src/app/shared/dialogs/add-my-material/add-my-material.component.html
@@ -11,6 +11,7 @@
       </div>
     </div>
   </div>
+  <mat-divider></mat-divider>
   <form *ngIf="addMyMaterial" [formGroup]="addMyMaterial" (ngSubmit)="submit()" class="width-100">
     <div formArrayName="myMaterial" *ngFor="let myMaterial of addMyMaterial.get('myMaterial')['controls']; let i = index">
       <div class="row" [formGroupName]="i">
@@ -27,7 +28,7 @@
         <div class="col-xs-1 text-right p-l-0">
           <mat-form-field
             class="border-select width-90 mat-form-field-infix-padding mat-select-placeholder-padding mat-form-field-flex-padding mat-form-field-padding"
-            style="padding-top: 7px;"
+            style="padding-top: 4px;"
           >
             <mat-select placeholder="Unit*" formControlName="materialUnit">
               <mat-option *ngFor="let unit of materialUnit" [value]="unit">
@@ -65,7 +66,7 @@
         <div class="col-xs-2">
           <mat-form-field class="border-input">
             <input type="text" placeholder="Pick one" matInput formControlName="category" [matAutocomplete]="auto" />
-            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+            <mat-autocomplete #auto="matAutocomplete">
               <mat-option *ngFor="let option of this.filterOptions | async" [value]="option">
                 {{ option.categoriesName }}
               </mat-option>
@@ -83,18 +84,21 @@
               </a>
             </span>
             <span>
-              <a href="javascript:void(0)" (click)="onAddRow()" class="p-t-5">
-                <span class="material-icons main-color">
-                  add_circle
-                </span>
-              </a>
+              <button
+                [disabled]="!addMyMaterial.valid"
+                (click)="onAddRow()"
+                class="p-t-5 material-icons cursor button-background"
+                [ngClass]="[!addMyMaterial.valid ? 'main-color-faded' : 'main-color']"
+              >
+                add_circle
+              </button>
             </span>
           </div>
         </div>
       </div>
       <hr *ngIf="i < addMyMaterial.get('myMaterial').value.length - 1" />
     </div>
-    <div class="text-center col-md-12 mt-4">
+    <div class="text-right col-xs-12 mt-4">
       <button class="btn btn-warning next-btn" [disabled]="!addMyMaterial.valid">Send For Approval</button>
     </div>
   </form>
