--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -1,49 +1,73 @@
 <mat-card class="m-t-5 m-b-10 box-shadow">
-  <mat-card-content class="mat-card-content">
+  <mat-card-content class="mat-card-content card-project-dashboard">
     <div class="row">
-      <div class="col-md-2 col-xs-12" style="height: 150px;">
+      <div class="col-lg-2 image-big-screen">
         <img class="radius-10 project-item-image" *ngIf="projectDetails.imageUrl" [src]="projectDetails.imageUrl" alt="project image" />
          <img class="radius-10 project-item-image"  *ngIf="!projectDetails.imageUrl" [src]="'../../../../assets/images/project-default-image.png'" alt="project image" />
       </div>
 
-      <div class="col-md-10 col-xs-12 card-project-dialog">
+      <div class="col-lg-10 col-md-12 col-xs-12 card-project-dialog">
         <div class="row">
           <div class="col-xs-10">
-            <div class="text-bold">
-              <span class="main-color card-project-name" href="javascript:void(0)">{{ projectDetails.projectName }}</span>
-            </div>
+              <div class="row">
+                   <div class="col-xs-3 image-small-screen">
+                     <div>
+                        <img style="width:100%" *ngIf="projectDetails.imageUrl" [src]="projectDetails.imageUrl" alt="project image" />
+                        <img style="width:100%"  *ngIf="!projectDetails.imageUrl" [src]="'../../../../assets/images/project-default-image.png'" alt="project image" />
+                     </div>
+                    </div>
+                    <div class="col-xs-9">
+                       <div class="text-bold">
+                         <span class="main-color card-project-name" href="javascript:void(0)">{{ projectDetails.projectName }}</span>
+                        </div>
 
-            <div class="row">
-              <div class=" col-xs-10 display-flex">
-                <div class="font-size12  color-text-card text-left width50Percent line-height">
-                  <i class="material-icons font-size12 color-text-card">room</i>
-                  <span *ngIf="projectDetails.addressLine1">{{ projectDetails.addressLine1 }}</span>
-                  <span *ngIf="projectDetails.addressLine2">, {{ projectDetails.addressLine2 }}</span>
-                  <span *ngIf="projectDetails.city">, {{ projectDetails.city }}</span>
-                  <span *ngIf="projectDetails.state">, {{ projectDetails.state }}</span>
-                  <span *ngIf="projectDetails.pinCode">, {{ projectDetails.pinCode }}</span>
-                </div>
-                <div class="font-size12 color-text-card text-left width50Percent">
-                  <i class="material-icons font-size12 color-text-card">format_shapes</i>
-                  <span class="p-l-5">Project Area: {{ projectDetails.area }} {{ projectDetails.unit }}</span>
-                </div>
-              </div>
-            </div>
+                        <div class="row">
+                          <div class=" col-xs-12 display-flex">
+                            <div class="font-size12  color-text-card text-left firstOne line-height">
+                              <div>
+                                  <i class="material-icons font-size12 color-text-card">room</i>
+                                <span *ngIf="projectDetails.addressLine1">{{ projectDetails.addressLine1 }}</span>
+                                <span *ngIf="projectDetails.addressLine2">, {{ projectDetails.addressLine2 }}</span>
+                                <span *ngIf="projectDetails.city">, {{ projectDetails.city }}</span>
+                                <span *ngIf="projectDetails.state">, {{ projectDetails.state }}</span>
+                                <span *ngIf="projectDetails.pinCode">, {{ projectDetails.pinCode }}</span>
+                              </div>
+                            
+                              <div class="firstOne-details" (click)="showDetails(projectDetails)">
+                                 View Details
+                              </div>
+                            </div>
 
-            <div class="row">
-              <div class=" col-xs-10 display-flex">
-                <div class="font-size12 color-text-card text-left width50Percent">
-                  <i class="material-icons font-size12 color-text-card">today</i>
-                  <span class="p-l-5">{{ projectDetails.startDate | date }}</span> to
-                  <span>{{ projectDetails.endDate | date: "dd MMM yyy" }}</span>
-                </div>
-                <div class="font-size12 color-text-card text-left width50Percent">
-                  <span
-                    >₹<span class="p-l-5"> Construction Cost: {{ projectDetails.cost | number: "1.2-2" }} Cr </span>
-                  </span>
-                </div>
+                          
+
+                            <div class="font-size12 color-text-card text-left others">
+                              <i class="material-icons font-size12 color-text-card">format_shapes</i>
+                              <span class="p-l-5">Project Area: {{ projectDetails.area }} {{ projectDetails.unit }}</span>
+                            </div>
+
+
+                          </div>
+                        </div>
+
+                        <div class="row">
+                          <div class=" col-xs-12 display-flex">
+                            <div class="font-size12 color-text-card text-left others">
+                              <i class="material-icons font-size12 color-text-card">today</i>
+                              <span class="p-l-5">{{ projectDetails.startDate | date }}</span> to
+                              <span>{{ projectDetails.endDate | date: "dd MMM yyy" }}</span>
+                            </div>
+                            <div class="font-size12 color-text-card text-left others">
+                              <span
+                                >₹<span class="p-l-5"> Construction Cost: {{ projectDetails.cost | number: "1.2-2" }} Cr </span>
+                              </span>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
               </div>
-            </div>
+             
+
+           
 
             <!-- <div class="row">
                       <div class=" col-xs-6 display-flex">
@@ -53,10 +77,8 @@
           </div>
 
           <div class="col-xs-2 text-right">
-            <!-- <a href="javascript:void(0)"
-                ><i class="material-icons main-color">file_copy</i></a
-              > -->
-            <a
+            <div class="icons">
+               <a
               *ngIf="!disableEditDelete && permissionObj.projectEdit"
               class="width-17-px p-l-10 p-r-10 cursor-pointer edit-project"
               matTooltip="Edit Project"
@@ -73,88 +95,115 @@
             >
               <img src="../../../../assets/images/delete-button.png" />
             </a>
+            </div>
+            <!-- <a href="javascript:void(0)"
+                ><i class="material-icons main-color">file_copy</i></a
+              > -->
+           
           </div>
         </div>
 
-        <div class="row m-t-20">
-          <div class="col-xs-8">
-            <div class="display-flex display-material-indent-po-box p-l-5 p-r-5">
-              <!-- <div
-                  class="col-sm-2  border-container-txt p-t-10 p-b-10 display-flex"
-                >
-                  <div class="font-size20 text-bold">
-                    {{ projectDetails.lowStockMaterialCount }}
-                  </div>
-                  <div class="font-size12 p-l-15">Low Stock Material</div>
-                </div> -->
-              <div
-                class="col-sm-4 box-custom color-text-card p-t-10 cursor-pointer display-flex showAllMaterials"
+
+
+        <div class="row m-t-20 tiles">
+
+                <div class="col-xs-6  col-sm-4 col-md-3  display-material-indent-po-box">
+                  <div class="box-custom color-text-card p-t-10 cursor-pointer display-flex showAllMaterials"
                 (click)="navigationToBOM(projectDetails.projectId, projectDetails)"
                 matTooltip="View All Materials"
               >
                 <div class="font-size20 text-bold">
-                  <span *ngIf="projectDetails.matCount">
+                  <span *ngIf="projectDetails.matCount"  class="max-width-96 word-break-word">
                     {{ projectDetails.matCount }}
                   </span>
-                  <span *ngIf="!projectDetails.matCount">
+                  <span *ngIf="!projectDetails.matCount"  class="max-width-96 word-break-word">
                     0
                   </span>
                 </div>
                 <div class="font-size12 p-l-15 p-t-5">
-                  All Materials
+                  <div class="max-width-96 word-break-word">
+                    All Materials
+                  </div>
                 </div>
               </div>
-              <div
-                class="col-sm-4 box-custom color-text-card p-t-10 cursor-pointer  display-flex showOpenIndents"
-                (click)="redirectToOpenIndentCount(projectDetails.projectId, projectDetails)"
-                matTooltip="View All Indents"
-              >
-                <div class="font-size20 text-bold">
-                  <span *ngIf="!projectDetails.openIndentCount">
-                    0
-                  </span>
-                  <span *ngIf="projectDetails.openIndentCount">
-                    {{ projectDetails.openIndentCount }}
-                  </span>
                 </div>
-                <div class="font-size12 color-text-card p-l-15 p-t-5">
-                  Open Indents
+              
+
+                <div class="col-xs-6  col-sm-4 col-md-3  display-material-indent-po-box">
+                  <div
+                                class="box-custom color-text-card p-t-10 cursor-pointer  display-flex showOpenIndents"
+                                (click)="redirectToOpenIndentCount(projectDetails.projectId, projectDetails)"
+                                matTooltip="View All Indents"
+                              >
+                                <div class="font-size20 text-bold">
+                                  <span *ngIf="!projectDetails.openIndentCount"  class="max-width-96 word-break-word">
+                                    0
+                                  </span>
+                                  <span *ngIf="projectDetails.openIndentCount"  class="max-width-96 word-break-word">
+                                    {{ projectDetails.openIndentCount }}
+                                  </span>
+                                </div>
+                                <div class="font-size12 color-text-card p-l-15 p-t-5">
+                                  <div  class="max-width-96 word-break-word">
+                                  Open Indents
+                                </div>
+                                </div>
+                              </div>
                 </div>
-              </div>
-              <span class="col-sm-4">
+
+              
+
+              <div class="col-xs-6  col-sm-4  col-md-3 third-item display-material-indent-po-box">
                 <div
-                  *ngIf="permissionObj.purchaseOrderFlag"
-                  class="box-custom cursor-pointer display-flex p-t-10 showPurchaseOrders"
-                  (click)="redirectToPurchaseOrder()"
-                  matTooltip="View All Purchase Orders"
-                >
-                  <div class="font-size20 color-text-card text-bold">
-                    <span *ngIf="projectDetails.purchaseOrderCount">
-                      {{ projectDetails.purchaseOrderCount }}
-                    </span>
-                    <span *ngIf="!projectDetails.purchaseOrderCount">
-                      0
-                    </span>
-                  </div>
-                  <div class="font-size12 color-text-card p-l-15 p-t-5">
-                    Purchase Orders <br />
-                    <span class="font-size14 purchase-amount" *ngIf="projectDetails.purchaseOrderCost"> ₹ {{ projectDetails.purchaseOrderCost | number: "1.2-2" }} </span>
-                  </div>
-                  <!-- <div class="font-size14   text-right p-l-25 m-t-15">
-                      <span *ngIf="projectDetails.purchaseOrderCost">
-                        ₹{{ projectDetails.purchaseOrderCost  | number : '1.2-2' }} Cr
-                      </span>
-                    </div> -->
+                                *ngIf="permissionObj.purchaseOrderFlag"
+                                class="box-custom color-text-card p-t-10 cursor-pointer  display-flex showOpenIndents"
+                                (click)="redirectToPurchaseOrder()"
+                                matTooltip="View All Purchase Orders"
+                              >
+                                <div class="font-size20 color-text-card text-bold">
+                                  <span *ngIf="projectDetails.purchaseOrderCount" class="max-width-96 word-break-word">
+                                    {{ projectDetails.purchaseOrderCount }}
+                                  </span>
+                                  <span *ngIf="!projectDetails.purchaseOrderCount" class="max-width-96 word-break-word">
+                                    0
+                                  </span>
+                                </div>
+                                <div class="font-size12 color-text-card p-l-15 p-t-5">
+                                  <div class="max-width-96 word-break-word">
+                                    Purchase Orders
+                                  </div>
+                                   <div>
+                                     <!-- <span class="font-size14 purchase-amount max-width-96 word-break-word" *ngIf="projectDetails.purchaseOrderCost"> ₹ {{ projectDetails.purchaseOrderCost | number: "1.2-2" }} </span> -->
+
+                                        <span class="font-size14 purchase-amount max-width-96 word-break-word"> ₹ 6,54,354,35,464 </span>
+                                   </div>
+                                  
+                                </div>
+                              </div>
+              </div>
+
+                <div class="col-xs-6 text-right add-project-mobile">
+                  <button
+                    mat-raised-button
+                    class="background-white-color main-button main-color view-project"
+                    *ngIf="url === '/project-dashboard'"
+                    (click)="navigationToBOM(projectDetails.projectId, projectDetails)"
+                  >
+                    View Project
+                  </button>
                 </div>
-              </span>
-            </div>
-          </div>
+
+            <div class="col-md-3 "></div>       
+            
+
+         
         </div>
+
         <div class="row m-t-10">
-          <div class="col-xs-6 text-left">
+          <div class="col-xs-6 text-left last-row">
             <div class="font-size12 color-text-card">Created : {{ projectDetails.createdAt | date: "fullDate" }} By {{ projectDetails.createdBy }}</div>
           </div>
-          <div class="col-xs-6 text-right">
+          <div class="col-xs-6 text-right last-row">
             <button
               mat-raised-button
               class="background-white-color main-button main-color view-project"
