--- a/src/assets/scss/pages/card-layout.scss
+++ b/src/assets/scss/pages/card-layout.scss
@@ -6,11 +6,11 @@
         font-weight: bold;
     }
     .display-material-indent-po-box{
-        justify-content: space-between;
+       // justify-content: space-between;
          .box-custom{
         	box-sizing: border-box;	
             height: 59px;	
-            width: 225px;	
+            width: 100%;	
             border: 1px solid #F5F5F5;	
             background-color: #FFFFFF;	
             box-shadow: 1px 1px 4px -1px rgba(0,0,0,0.5);
@@ -37,3 +37,111 @@
     height: 100%;
     max-width: 200px;
 }
+
+@media only screen and (max-width: 1273px) {
+.card-project-dashboard{
+    .image-big-screen{
+        display: none;
+    }
+    .image-small-screen{
+        display: block;
+        padding: 0px;
+    }
+}
+}
+
+@media only screen and (max-width: 763px) {
+     .tiles{
+            .third-item{
+                padding-top:10px;
+            }
+        }
+}
+@media only screen and (min-width: 1273px) {
+.card-project-dashboard{
+    .image-big-screen{
+        display: block;
+        height: 150px;
+    }
+    .image-small-screen{
+        display: none;
+    }
+}
+}
+@media only screen and (max-width: 576px){
+    .card-project-dashboard{
+        .icons{
+            display: flex;
+            justify-content: flex-end;
+        }
+        .others{
+            display: none;
+        }
+        .firstOne{
+            display: block;
+            width : 100%
+        }
+        .firstOne-details{
+            display: block;
+            color: #f47721;
+            font-size: 12px;
+            float: right;
+            cursor: pointer;
+        }
+
+        .tiles{
+            .display-material-indent-po-box{
+                padding-left: 5px;
+                padding-right: 10px;
+            }
+            .third-item{
+                padding-top:10px;
+            }
+        }
+         .add-project-mobile{
+            display: block;
+            button{
+                position: absolute;
+                right: 0%;
+                top: 76%;
+            }
+        }
+        .last-row{
+            display: none;
+        }
+
+    }
+}
+@media only screen and (min-width: 576px){
+    .card-project-dashboard{
+        .icons{
+            display: flex;
+            justify-content: flex-end;
+        }
+        .others{
+            display: block;
+            width: 50%;
+        }
+        .firstOne{
+            display: block;
+            width : 50%
+        }
+         .firstOne-details{
+            display: none;
+            }
+        
+        .tiles{
+            .display-material-indent-po-box{
+                padding-left: 5px;
+                padding-right: 40px;
+            }
+        }
+        .add-project-mobile{
+            display: none;
+        }
+        .last-row{
+            display: block;
+        }
+    }
+}
+
