--- a/src/app/features/bom/bom-topMaterial/bom-topMaterial.component.html
+++ b/src/app/features/bom/bom-topMaterial/bom-topMaterial.component.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-xs-2">
                       <mat-form-field class="border-select">
-                        <mat-select formControlName="materialUnit" placeholder="Select material unit">
+                        <mat-select formControlName="materialUnit" placeholder="Unit">
                           <mat-option *ngFor="let unit of materialUnit" [value]="unit">
                             <span>
                               {{ unit }}
@@ -54,9 +54,6 @@
                         <mat-form-field class="border-input widthZero">
                           <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text" class="p-b-5 shortWidth" placeholder="Enter Quantity" />
                         </mat-form-field>
-                        <span class="p-l-10 p-t-25">
-                          {{ subcategory.materialUnit }}
-                        </span>
                       </span>
                     </div>
                     <div class="col-xs-2 text-center">
