--- a/src/app/shared/dialogs/add-my-material/add-my-material.component.html
+++ b/src/app/shared/dialogs/add-my-material/add-my-material.component.html
@@ -30,7 +30,7 @@
             class="border-select width-90 mat-form-field-infix-padding mat-select-placeholder-padding mat-form-field-flex-padding mat-form-field-padding"
             style="padding-top: 4px;"
           >
-            <mat-select placeholder="Unit*" formControlName="materialUnit">
+            <mat-select placeholder="*Unit" formControlName="materialUnit">
               <mat-option *ngFor="let unit of materialUnit" [value]="unit">
                 <span>
                   {{ unit }}
@@ -42,7 +42,7 @@
         <div class="col-xs-2 text-center">
           <span>
             <mat-form-field class="border-input width-90">
-              <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text" placeholder="Quantity*" />
+              <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text" placeholder="*Quantity" />
             </mat-form-field>
           </span>
         </div>
@@ -65,7 +65,7 @@
         </div>
         <div class="col-xs-2">
           <mat-form-field class="border-input">
-            <input type="text" placeholder="Pick one" matInput formControlName="category" [matAutocomplete]="auto" />
+            <input type="text" placeholder="Category" matInput formControlName="category" [matAutocomplete]="auto" />
             <mat-autocomplete #auto="matAutocomplete">
               <mat-option *ngFor="let option of this.filterOptions | async" [value]="option">
                 {{ option.categoriesName }}
