--- a/src/app/shared/dialogs/add-my-material/add-my-material.component.html
+++ b/src/app/shared/dialogs/add-my-material/add-my-material.component.html
@@ -14,7 +14,7 @@
   <mat-divider></mat-divider>
   <form *ngIf="addMyMaterial" [formGroup]="addMyMaterial" (ngSubmit)="submit()" class="width-100">
     <div formArrayName="myMaterial" *ngFor="let myMaterial of addMyMaterial.get('myMaterial')['controls']; let i = index">
-      <div class="row" [formGroupName]="i">
+      <div class="row p-t-10" [formGroupName]="i">
         <div class="col-xs-2">
           <mat-form-field class="width-90 mat-form-field-padding" style="padding-top: 3px;">
             <mat-label>*Material Name</mat-label>
@@ -28,7 +28,7 @@
         <div class="col-xs-1 text-right p-l-0">
           <mat-form-field
             class="border-select width-90 mat-form-field-infix-padding mat-select-placeholder-padding mat-form-field-flex-padding mat-form-field-padding"
-            style="padding-top: 4px;"
+            style="padding-top: 6px;"
           >
             <mat-select placeholder="*Unit" formControlName="materialUnit">
               <mat-option *ngFor="let unit of materialUnit" [value]="unit">
@@ -54,7 +54,10 @@
           </span>
         </div>
         <div class="col-xs-2">
-          <mat-form-field class="border-select role-input width-90">
+          <mat-form-field
+            class="border-select width-90 mat-form-field-flex-padding mat-form-field-padding mat-form-field-infix-padding mat-select-placeholder-padding"
+            style="padding-top: 6px;"
+          >
             <mat-label>*Trade</mat-label>
             <mat-select formControlName="trade">
               <mat-option *ngFor="let trade of tradesList" [value]="trade">
@@ -66,7 +69,7 @@
         <div class="col-xs-2">
           <mat-form-field class="border-input">
             <input type="text" placeholder="Category" matInput formControlName="category" [matAutocomplete]="auto" />
-            <mat-autocomplete #auto="matAutocomplete">
+            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
               <mat-option *ngFor="let option of this.filterOptions | async" [value]="option">
                 {{ option.categoriesName }}
               </mat-option>
