PO- Download Integrated Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -173,9 +173,9 @@
                                     Purchase Orders
                                   </div>
                                    <div>
-                                     <!-- <span class="font-size14 purchase-amount max-width-96 word-break-word" *ngIf="projectDetails.purchaseOrderCost"> ₹ {{ projectDetails.purchaseOrderCost | number: "1.2-2" }} </span> -->
+                                     <span class="font-size12 purchase-amount max-width-96 word-break-word" *ngIf="projectDetails.purchaseOrderCost"> ₹ {{ projectDetails.purchaseOrderCost | number: "1.2-2" }} </span>
 
-                                        <span class="font-size14 purchase-amount max-width-96 word-break-word"> ₹ 6,54,354,35,464 </span>
+                                        <!-- <span class="font-size12 purchase-amount max-width-96 word-break-word"> ₹ 6,54,354,35,464 </span> -->
                                    </div>
                                   
                                 </div>
