--- a/src/app/shared/layout/main-layout/main-layout.component.html
+++ b/src/app/shared/layout/main-layout/main-layout.component.html
@@ -12,7 +12,7 @@
       </button>
 
       </div>
-    <app-sidenav-list></app-sidenav-list>
+    <app-sidenav-list [sidenav]="sidenav"></app-sidenav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <app-header #header [menu]="sidenav"></app-header>
