--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -154,3 +154,8 @@ color: #000000 !important;
        margin-top: -4px;
      }
    }
+   .sidenav{
+     .active{
+       background: #efefefd1;
+     }
+   }
