--- a/src/app/shared/dialogs/add-my-material/add-my-material.component.html
+++ b/src/app/shared/dialogs/add-my-material/add-my-material.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12 header-border p-t-10">
     <div class="row">
       <div class="col-xs-10">
-        <h1 mat-dialog-title>Add Good Receive Note</h1>
+        <h1 mat-dialog-title>Add Custom Material</h1>
       </div>
       <div class="col-xs-2">
         <button type="button" class="close pull-right p-t-5" (click)="closeDialog()" aria-label="Close">
@@ -69,7 +69,7 @@
         <div class="col-xs-2">
           <mat-form-field class="border-input width-90">
             <input type="text" placeholder="Category" matInput formControlName="category" [matAutocomplete]="auto" />
-            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" class="mat-option-alignment">
               <mat-option *ngFor="let option of this.filterOptions | async" [value]="option">
                 {{ option.categoriesName }}
               </mat-option>
