--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -46,3 +46,9 @@
     padding-bottom: 0px !important;
   }
 }
+.mat-option-alignment {
+  mat-option.mat-option {
+    white-space: normal !important;
+    line-height: normal !important;
+  }
+}
