--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -108,6 +108,9 @@ color: #000000 !important;
      .whatsapp-icon-number{
        display: none;
      }
+     .whatsapp-div-header{
+       background: none;
+     }
       .logo-profile-header{
             .username{
               display: none;
