--- a/src/assets/scss/pages/dialog-styles.scss
+++ b/src/assets/scss/pages/dialog-styles.scss
@@ -88,3 +88,18 @@
 .padding-for-dialog-after-header{
     padding-top:14px !important;
 }
+
+ @media only screen and (max-width: 576px) {
+        .add-project-component-dialog .add-edit-form-dialog{
+
+          .col-sm-3 mat-form-field{
+            width: 100%
+          }
+          .col-sm-6 mat-form-field{
+            width: 100%;
+             }
+         .col-sm-6.date-dialog-add-edit mat-form-field{
+            width : 100%;
+            }
+        } 
+ }
