Btn Add project Fixed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -217,7 +217,7 @@
   </div>
   <div mat-dialog-actions>
     <div class="col-sm-12 col-md-12 add-edit-dialog-button">
-      <button mat-raised-button [disabled]="(!imageFileSize && localImg)?true:(!form.valid || (!validPincode) || sameStartEndDate)" class="main-background-color main-button color-white pull-right">
+      <button mat-raised-button [disabled]="(!imageFileSize && localImg)?true:(!form.valid || (!validPincode) || sameStartEndDate)" class="main-background-color main-button color-white">
         <span *ngIf="!data.isEdit">Add</span>
         <span *ngIf="data.isEdit">Save</span>
       </button>
